--- a/src/style.scss
+++ b/src/style.scss
@@ -31,9 +31,7 @@ main{
         }
         input[type=number]{
             -webkit-appearance: none;
-            background: #000000;
-            color: #eeeeee;
-            border: solid 1px #eeeeee;
+            border: 0;
             font-size: .9em;
             padding: 0 .25em;
             width: 120px;
@@ -41,6 +39,16 @@ main{
         input[type=number]::-webkit-inner-spin-button, 
         input[type=number]::-webkit-outer-spin-button { 
         -webkit-appearance: none;
+        }
+        select{
+            -webkit-appearance: none;
+            padding: 0 .25em;
+            border-radius: 0;
+            font-size: .9em;
+            option{
+                -webkit-appearance: none;
+                padding: 0 .25em;
+            }
         }
     }
     .output{
